<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addTask"
        android:icon="@drawable/add_box"
        android:title="@string/add"
        app:showAsAction="always" />

    <item
        android:id="@+id/sortItems"
        android:icon="@drawable/sort_icon"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deleteAllLocal"
        android:title="@string/delete_all_local"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteAllRemote"
        android:title="@string/delete_all_remote"
        app:showAsAction="never" />

    <item
        android:id="@+id/syncDB"
        android:title="@string/sync_databases"
        app:showAsAction="never" />

</menu>