<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="org.julheinz.viewmodel.DetailviewViewModel" />

        <variable
            name="activity"
            type="org.julheinz.madtodoapp.DetailViewActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/DetailView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="4dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onCancel()}"
            android:text="@string/backBtn_label"
            android:textAlignment="viewStart"
            android:textColor="@color/dark_blue"
            app:backgroundTint="@color/white"
            app:iconTint="@color/dark_blue"
            app:icon="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:error="@{viewmodel.errorStatus}"
            android:hint="@string/title_hint"
            app:endIconMode="clear_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backBtn">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:onEditorAction="@{(view,actionId,keyEvent) -> viewmodel.checkFieldInputValid(actionId)}"
                android:onTextChanged="@{() -> viewmodel.onFieldInputChanged()}"
                android:singleLine="true"
                android:text="@={viewmodel.taskEntity.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/isDoneCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewmodel.taskEntity.done}"
            android:text="@string/is_done_label"
            android:visibility="@{activity.doneCheckboxVisibility}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/taskTitleInput">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="10"
                android:minLines="5"
                android:text="@={viewmodel.taskEntity.description}"
                android:layout_marginBottom="10dp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dueDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionInput">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dueTimeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onSetDueTime()}"
                android:text="@{viewmodel.dateTimeHelper.hourOfDay + `:` + viewmodel.dateTimeHelper.minute}"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_blue"
                app:backgroundTint="@color/white"
                app:icon="@drawable/schedule_icon"
                app:iconTint="@color/dark_blue"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dueDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:onClick="@{() -> viewmodel.onSetDueDate()}"
                android:text="@{viewmodel.dateTimeHelper.dayOfMonth + `.` + (viewmodel.dateTimeHelper.month+1) + `.` + viewmodel.dateTimeHelper.year}"
                android:textAlignment="viewStart"
                android:textColor="@color/dark_blue"
                app:backgroundTint="@color/white"
                app:iconTint="@color/dark_blue"
                app:icon="@drawable/event"
                app:layout_constraintStart_toEndOf="@id/dueTimeBtn"
                app:layout_constraintTop_toTopOf="parent"

                />


            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/material_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_fav_label"
                android:checked="@={viewmodel.taskEntity.fav}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewmodel.onSave()}"
            android:text="@string/saveBtn_label"
            android:textAlignment="center"
            app:icon="@drawable/save"
            app:iconGravity="textStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>





